--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,4 +3,5 @@
 <!-- link to home page -->
 <p><a href="/">Home</a></p>
 <p><a href="/about">About</a></p>
+<p><a href="/projects">Projects</a></p>
 </header>
